fix layout body scrollbars

--- a/frontend/src/components/layout/Layout.module.scss
+++ b/frontend/src/components/layout/Layout.module.scss
@@ -1,5 +1,6 @@
 @import "styles/spacings";
 @import "styles/colors";
+@import "styles/scrollbars";
 
 $side-nav-width: 80px;
 
@@ -34,6 +35,8 @@ $side-nav-width: 80px;
       display: flex;
       flex-direction: column;
       flex: 1;
+
+      @include hiddenScrollbars();
     }
 
     .bodyWithBorderSpacing {
